--- a/id_card_maker/package.json
+++ b/id_card_maker/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "typescript": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
