--- a/id_card_maker/package.json
+++ b/id_card_maker/package.json
@@ -1,12 +1,15 @@
 {
   "name": "id_card_maker",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "private": true,
   "dependencies": {
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "5.0.1",
     "typescript": "^3.3.3"
+  },
+  "engines": {
+    "node": ">=12.0.0 <17.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
